Source/ThirdParty/ANGLE/src/common/platform.h
@@ -132,6 +132,7 @@
 #        endif
 #        if TARGET_OS_MACCATALYST
 #            define ANGLE_PLATFORM_MACCATALYST 1
+#            undef TARGET_OS_IOS
 #        endif
 #    endif
 #    // This might be useful globally. At the moment it is used
